--- a/app/src/main/res/layout/list_order.xml
+++ b/app/src/main/res/layout/list_order.xml
@@ -2,8 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+    android:elevation="6dp"
+    android:layout_margin="8dp">
 
     <ImageView
         android:id="@+id/imgKurir"
@@ -14,8 +17,7 @@
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -25,10 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgKurir"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp">
+      android:layout_margin="4dp">
 
         <TextView
             android:id="@+id/nama"
@@ -45,27 +44,69 @@
             android:textSize="12sp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
-            android:text="Turi Sleman Yogyakarta no 18."/>
+            android:text="Sleman"/>
         <TextView
             android:id="@+id/resi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
+            android:textSize="16sp"
             android:text="TJNT 88780 8U787"
             />
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="dikemas"
-            android:textColor="#FFFFFF"
-            android:background="@color/red"
-            android:padding="4dp"
-            android:layout_marginTop="4dp"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginLeft="8dp"
+            android:gravity="center_vertical">
+            <TextView
+                android:id="@+id/jml_barang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="@color/orange"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="Pcs"
+                android:layout_marginLeft="3dp"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/barang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="Redmi Note 9"
+                android:textStyle="bold"
+                android:layout_marginLeft="8dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:background="@color/red"
+        android:padding="4dp"
+        android:text="dikemas"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
