--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="red">#DD2618</color>
     <color name="orange">#FF5722</color>
     <color name="grey">#DAADADAD</color>
+    <color name="gry">#D2EDEAEA</color>
 </resources>
