--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Order.OrderFragment">
 
@@ -37,5 +38,17 @@
                 android:layout_marginRight="4dp"
                 tools:listitem="@layout/list_order" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <TextView
+            android:id="@+id/noOrder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No order yet!"
+            android:textSize="18sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/swipeRefreshOrder" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
