--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="orange">#FF5722</color>
     <color name="grey">#DAADADAD</color>
     <color name="gry">#D2EDEAEA</color>
+    <color name="green">#4CAF50</color>
+    <color name="gdark">#313131</color>
 </resources>
